Drawings tag and 2013 import started nov and dec

--- a/en/_posts/2014-01-14-2013.md
+++ b/en/_posts/2014-01-14-2013.md
@@ -1,6 +1,6 @@
 ---
-tags: [yearly]
-img: "2013.jpg"
+tags: [yearly,draw]
+cover: "2013.jpg"
 redirect_from:
  - /summary2013/
 ---
@@ -11,7 +11,7 @@ I know I'm late to the party. It's third week of the new year and I'm talking ab
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 Last year was very mixed for me. I've grown and learned a lot. Here goes:
 
