--- a/en/_posts/2014-01-22-biz.md
+++ b/en/_posts/2014-01-22-biz.md
@@ -1,6 +1,6 @@
 ---
-tags: [business]
-img: "biz.jpg"
+tags: [business,draw]
+cover: "biz.jpg"
 ---
 
 # I'm officially a decade-long entrepreneur and loving it!
@@ -9,7 +9,7 @@ Silently last month, I had an opportunity to celebrate my 10th anniversary as an
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 As I already posted on my blog, [my parents](https://sliwinski.com/parents) inspired me to start a company. They both are very entrepreneurial and seeing them working on their own in the post-communist Poland and seeing their freedom, ups, downs and everything surrounding entrepreneurship I also wanted to be like them.
 
