--- a/en/_posts/2014-01-31-mac.md
+++ b/en/_posts/2014-01-31-mac.md
@@ -1,6 +1,6 @@
 ---
-tags: [computers]
-img: "mac.jpg"
+tags: [computers,draw]
+cover: "mac.jpg"
 ---
 
 # Me and Mac. A "love in the air" story
@@ -9,7 +9,7 @@ Last week Apple celebrated its [30 year anniversary of the Mac][1] and along wit
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 I guess it all started with the first iMacs and iBooks - these colorful ones that Steve Jobs helped conceive when he got back to Apple, but to be honest I started really following Apple when they switched their processors to Intel. My friend [Michael Hyatt][3] switched to the Mac and I started following Apple more carefully. I was amused by the "Get A Mac" campaign and kept looking at these new Macbook Pros but to me they were beautiful, but too big. And they had no touch. Back then, in 2006-2008 I was a TabletPC user, first with Toshiba M200 and later with IBM Thinkpad X60T. But then came the envelope:
 
