--- a/en/_posts/2014-02-04-7nozbe.md
+++ b/en/_posts/2014-02-04-7nozbe.md
@@ -1,6 +1,6 @@
 ---
-tags: [nozbe,business]
-img: "7nozbe.jpg"
+tags: [nozbe,business,draw]
+cover: "7nozbe.jpg"
 ---
 
 # 7 years running Nozbe... and just getting started!
@@ -9,7 +9,7 @@ Wow, time really flies. It's been now [7 years since I started Nozbe][s] and I r
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Last year was important
 
