--- a/en/_posts/2014-03-05-applecar.md
+++ b/en/_posts/2014-03-05-applecar.md
@@ -1,6 +1,6 @@
 ---
-tags: [business,computers]
-img: "applecar.jpg"
+tags: [business,computers,draw]
+cover: "applecar.jpg"
 ---
 
 # Apple's next big thing? iCar. Why Apple buying Tesla actually makes sense.
@@ -9,7 +9,7 @@ As Apple has lots of cash in the bank (both national and abroad) and their main 
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Tesla is not a car - it's a giant laptop on 4 wheels
 
