--- a/en/_posts/2014-04-19-catholic.md
+++ b/en/_posts/2014-04-19-catholic.md
@@ -1,6 +1,6 @@
 ---
-tags: [life]
-img: "catholic.jpg"
+tags: [life,draw]
+cover: "catholic.jpg"
 ---
 
 # Yes, I'm a Christian (Roman-Catholic) and I believe Jesus Christ to be my Savior
@@ -9,7 +9,7 @@ Happy Easter everyone! Hope you like my special post for this Easter weekend. We
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 I was really blown away when I started getting messages like these:
 
