--- a/en/_posts/2014-05-07-my-last-pc.md
+++ b/en/_posts/2014-05-07-my-last-pc.md
@@ -1,6 +1,6 @@
 ---
-tags: [computers,imagazine]
-img: "my-last-pc.jpg"
+tags: [computers,imagazine,draw]
+cover: "my-last-pc.jpg"
 ---
 
 # Why my Macbook Pro is the last PC I'll ever buy or need
@@ -11,7 +11,7 @@ I got myself a great gift last Christmas - a brand new Macbook Pro 13" with Reti
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Yearly upgrade cycles of my iOS devices
 
