--- a/en/_posts/2014-05-26-ipad-pro.md
+++ b/en/_posts/2014-05-26-ipad-pro.md
@@ -1,6 +1,6 @@
 ---
-tags: [ipadonly,computers,imagazine]
-img: "ipad-pro.jpg"
+tags: [ipadonly,computers,imagazine,draw]
+cover: "ipad-pro.jpg"
 ---
 
 # iPad Pro? No, we don't need a hybrid but better processes and apps (and more RAM)
@@ -11,7 +11,7 @@ We're almost there with WWDC (Apple's World Wide Develoeprs Conference) where th
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## iPad PRO Hybrid 12"?
 
