--- a/en/_posts/2014-06-24-fitness2014.md
+++ b/en/_posts/2014-06-24-fitness2014.md
@@ -1,6 +1,6 @@
 ---
-tags: [sports,life]
-img: "fitness2014.jpg"
+tags: [sports,life,draw]
+cover: "fitness2014.jpg"
 ---
 
 # How I became leaner, healthier and stronger? My first 6 months of 2014 in detail: slow carb diet, new eating habits and a lot more regular exercise.
@@ -9,7 +9,7 @@ In the last 2 years I managed to get even more in shape by [running very regular
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Brief history of my weight
 
