--- a/en/_posts/2014-09-15-mom.md
+++ b/en/_posts/2014-09-15-mom.md
@@ -1,6 +1,6 @@
 ---
-tags: [life]
-img: "mom.jpg"
+tags: [life,draw]
+cover: "mom.jpg"
 ---
 
 # 5 lessons I learned from my mom - and how she shaped my life
@@ -9,7 +9,7 @@ I'm literally writing this post to brag about how awesome my mom is. And to reme
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 Last year I wrote about [my entrepreneurial parents](https://sliwinski.com/parents) where I mentioned how my mom, despite having obtained a demanding career as an architect, switched her jobs several times in her life. But there's a lot more to her. Today I want to share with you the things I learned from my mom so that you might hopefully learn something from her as well:
 
