--- a/en/_posts/2015-02-03-8nozbe.md
+++ b/en/_posts/2015-02-03-8nozbe.md
@@ -1,6 +1,6 @@
 ---
-tags: [nozbe,business]
-img: "8nozbe.jpg"
+tags: [nozbe,business,draw]
+cover: "8nozbe.jpg"
 ---
 
 # Nozbe celebrates 8 years in business! Going stronger than ever!
@@ -9,7 +9,7 @@ Last Sunday, February 1, my company: [Nozbe][n] celebrated 8 years of being in b
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## In 2014 we launched Nozbe 2.0 and trial accounts!
 
