--- a/en/_posts/2015-02-26-https.md
+++ b/en/_posts/2015-02-26-https.md
@@ -1,6 +1,6 @@
 ---
-tags: [blogging]
-img: "https.jpg"
+tags: [blogging,draw]
+cover: "https.jpg"
 ---
 
 # 3 changeS with a capital "S" to my blog: SSL, Sliwinski.com and a Star "★"
@@ -9,7 +9,7 @@ One of the main goals this year for me is to make this blog my main platform for
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 The short version:
 
