--- a/en/_posts/2014-01-27-5-loves.md
+++ b/en/_posts/2014-01-27-5-loves.md
@@ -1,6 +1,6 @@
 ---
-tags: [business]
-img: "5-loves.jpg"
+tags: [business,draw]
+cover: "5-loves.jpg"
 ---
 
 # 5 things I love about my work and why it gets me excited every day
@@ -9,7 +9,7 @@ It's really hard for me to talk about work these days. We're in the middle of cr
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 Steve Jobs in his [commencement address at Stanford][1] explained how it was important to find "what you love doing" and if you didn't find it, he urged people listening to him not to give up, not to settle, but keep looking. When I finished my business degree I knew I love computers and the Internet but I still wasn't sure what I'd be doing with my life... so I kept searching, [started my company](https://sliwinski.com/biz) and finally built [Nozbe][Nozbe] and now not only do I love my work, there are 5 things I love about it:
 
