--- a/en/_posts/2012-11-13-ifamily.md
+++ b/en/_posts/2012-11-13-ifamily.md
@@ -1,6 +1,8 @@
 ---
 tags: [life,ipadonly,draw]
 img: "syncing-family-in-the-cloud-two-ways-to-set-u.jpg"
+redirect_from:
+ - /syncing-family-in-the-cloud-two-ways-to-set-u/
 ---
 
 # Syncing family in the cloud - two ways to set up iCloud with your spouse
@@ -41,8 +43,8 @@ Each device (iPhone/iPad/iPod/Mac) needs to have one "mother" account - the main
 
 There are no "family iCloud" accounts per se, but you can mimic them in two ways:
 
-  * **Version 1** - you can set up your personal iCloud account as the "mother account" on your device and add a common iCloud account for additional syncing of contacts and calendars.
-  * **Version 2** - you can set up the same "mother" iCloud account on all family devices and personalize them with additional iCloud accounts on each of them (for iMessage and FaceTime).
+* **Version 1** - you can set up your personal iCloud account as the "mother account" on your device and add a common iCloud account for additional syncing of contacts and calendars.
+* **Version 2** - you can set up the same "mother" iCloud account on all family devices and personalize them with additional iCloud accounts on each of them (for iMessage and FaceTime).
 
 Each version has its PROs and CONs. I initially set up my family's iCloud accounts as per version 1 and we had them like this for a few months. Last week we decided with my wife to change the setup to version 2. Here are some details:
 
@@ -58,9 +60,9 @@ That's it. Now me and my wife see the same calendars and contacts but have separ
 
 We also have a separate Apple account for Apps and Music purchases and I set this up on all of our devices, too (no need to buy music or apps twice, right?)
 
-### Benefits of this setup: You have separate bookmarks, separate data and separate photo streams. Sounds good, right?
+**Benefits of this setup**: You have separate bookmarks, separate data and separate photo streams. Sounds good, right?
 
-### Disadvantages of this setup: If you sync and backup to iCloud (and we do) and are running out of free 5GB space, you need to upgrade each account separately. It's more difficult to share photos (although now it's possible through shared photo streams)
+**Disadvantages of this setup**: If you sync and backup to iCloud (and we do) and are running out of free 5GB space, you need to upgrade each account separately. It's more difficult to share photos (although now it's possible through shared photo streams)
 
 ## Version 2 - central "mother" account with additional personal accounts
 
@@ -76,15 +78,15 @@ Apart from that I set up our personal iCloud accounts as accounts for iMessage a
 
 Recently my wife complained a little about the amount of contacts I accumulated over the years (especially business-wise) so I decided to move these to the address book on my personal iCloud account. This way our "common" Address book is slimmer and consists of mostly people we frequently talk to.
 
-## Benefits of this setup: More integration, common photo stream and backing up all of the devices to the same iCloud account - if we need more space, we can upgrade just one "mother" account.
+**Benefits of this setup**: More integration, common photo stream and backing up all of the devices to the same iCloud account - if we need more space, we can upgrade just one "mother" account.
 
-### Disadvantages of this setup: Less privacy as you share photo streams and documents.
+**Disadvantages of this setup**: Less privacy as you share photo streams and documents.
 
-### You can set up the iCloud accounts for family usage - and there are two ways to do it - choice is yours
+## You can set up the iCloud accounts for family usage - and there are two ways to do it - choice is yours
 
 We tried both versions and we decided to stick with version 2 for more convenience and better "family collaboration". We're loving the setup so far. With iCloud it's so great that everything just works and our devices are in sync. The benefits of not having to ask your spouse about "that phone number" or scheduling conflicts in the calendar are great and make our lives more convenient.
 
-## _Do you sync calendars or contacts with your spouse? How do you set up your iDevices or Android phones so that you can be more "in sync"? Any tips? Something I missed?_
+_Do you sync calendars or contacts with your spouse? How do you set up your iDevices or Android phones so that you can be more "in sync"? Any tips? Something I missed?_
 
 
 [n]: https://michael.gratis/nozbe
