office links simplified

--- a/en/_posts/2012-10-18-office12.md
+++ b/en/_posts/2012-10-18-office12.md
@@ -1,6 +1,8 @@
 ---
 tags: [office]
 img: "simplifying-productive-home-office-in-2012.jpg"
+redirect_from:
+ - /simplifying-productive-home-office-in-2012/
 ---
 
 # Simplifying Productive! Home Office in 2012
