--- a/en/_posts/2014-01-23-office13.md
+++ b/en/_posts/2014-01-23-office13.md
@@ -1,6 +1,8 @@
 ---
 tags: [show,video,office]
 vid: "3TDweQg3epI"
+redirect_from:
+ - /show-home-office-2013/
 ---
 
 # My Home office 2013 - Productive!Show #62
