--- a/en/_posts/2015-06-10-office15.md
+++ b/en/_posts/2015-06-10-office15.md
@@ -1,6 +1,8 @@
 ---
 tags: [office]
 img: "homeoffice2015.jpg"
+redirect_from:
+ - /homeoffice2015/
 ---
 
 # My Home Office 2015 renovation with Ikea's height-adjustable desk
