--- a/en/_posts/2016-03-08-office16.md
+++ b/en/_posts/2016-03-08-office16.md
@@ -1,6 +1,8 @@
 ---
 tags: [office]
 img: "homeoffice2016.jpg"
+redirect_from:
+ - /homeoffice2016/
 ---
 
 # My Home Office 2016: whiteboard, stand-up desk, chill-out sofa and less stuff
