Office 2012 in high res

--- a/en/_posts/2012-10-18-office12.md
+++ b/en/_posts/2012-10-18-office12.md
@@ -30,7 +30,17 @@ It all starts with Chaos - I removed all the cables and switches, and gadgets an
 
 Then, after careful analysis I did a diagram of the things I really needed in my home office and made sure there wasn't anything "too much" set up there. Instead of two "baskets" of cables, one for the Air and one for the Mini, it's just one now:
 
-![{{ page.title }} 4](/img/simplifying-productive-home-office-in-2012-3.jpg)
+Here's the diagram:
+
+![{{ page.title }} 3](/img/simplifying-productive-home-office-in-2012-3.jpg)
+
+Here are the main things put in place - the Mini and the additional devices in the cage:
+
+![{{ page.title }} 4](/img/simplifying-productive-home-office-in-2012-4.jpg)
+
+And here's the end result of my compact hidden-under-the-desk cage:
+
+![{{ page.title }} 5](/img/simplifying-productive-home-office-in-2012-5.jpg)
 
 ## Losing weight - before and after
 
@@ -53,15 +63,22 @@ Other machines that survived the change:
 
 ## Connecting the dots, moving to a new place, standing up
 
-Now as I work on my iPad, I usually work standing there, so my new stand-up desk is an integral part of my home office. My MacBook Air doesn't have a dedicated space anymore as it's not being used all that much. Here's the final result:
+Now as I work on my iPad, I usually work standing there, so my new stand-up desk is an integral part of my home office. My MacBook Air doesn't have a dedicated space anymore as it's not being used all that much.
 
-![{{ page.title }} 5](/img/simplifying-productive-home-office-in-2012-4.jpg)
+Here's the furniture set up in place:
+
+![{{ page.title }} 6](/img/simplifying-productive-home-office-in-2012-6.jpg)
+
+
+Here's the final result:
+
+![{{ page.title }} 7](/img/simplifying-productive-home-office-in-2012-7.jpg)
 
 ## Bonus: Ambient lighting
 
 As I heard that "ambient lighting" is really healthy and it'a great way of working in the evenings when it's dark outside - I decided to install an Ikea set of diodes I bought the other day. The effect is amazing:
 
-![{{ page.title }} 7](/img/simplifying-productive-home-office-in-2012-5.jpg)
+![{{ page.title }} 8](/img/simplifying-productive-home-office-in-2012-8.jpg)
 
 There it is, my home office 2012 - new, improved, simplified. Love it.
 
