high res drawings

--- a/en/_posts/2012-11-13-ifamily.md
+++ b/en/_posts/2012-11-13-ifamily.md
@@ -1,6 +1,6 @@
 ---
 tags: [life,ipadonly,draw]
-img: "syncing-family-in-the-cloud-two-ways-to-set-u.jpg"
+cover: "syncing-family-in-the-cloud-two-ways-to-set-u.jpg"
 redirect_from:
  - /syncing-family-in-the-cloud-two-ways-to-set-u/
 ---
@@ -12,7 +12,7 @@ Ever since I started working [mostly on my iPad](/ipadonly) I tried to take adva
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Why I wanted to share calendars and contacts with my wife
 
