--- a/en/_posts/2014-01-27-5-loves.md
+++ b/en/_posts/2014-01-27-5-loves.md
@@ -1,6 +1,7 @@
 ---
 tags: [business,draw]
 cover: "5-loves.jpg"
+redirect_from: /i-love-my-users-readers-and-followers/
 ---
 
 # 5 things I love about my work and why it gets me excited every day
