--- a/en/_posts/2011-10-04-office11.md
+++ b/en/_posts/2011-10-04-office11.md
@@ -1,7 +1,7 @@
 ---
 tags: [office]
 img: "cable-management-in-my-home-office.jpg"
-redirect_from: /office11/
+redirect_from: /cable-management-in-my-home-office/
 ---
 
 # Cable management in my home office
