--- a/en/_posts/2011-10-04-office11.md
+++ b/en/_posts/2011-10-04-office11.md
@@ -1,17 +1,23 @@
 ---
 tags: [office]
-img: "cable-management-in-my-home-office.jpg"
+img: "office11.jpg"
 redirect_from: /cable-management-in-my-home-office/
 ---
 
-# Cable management in my home office
+# Cable management in my home office 2011
 
 
-Well, last year I designed my home office and [I blogged about it](http://michaelnozbe.com/zen-in-my-new-2010-clutter-free-home-office). Even [recorded a video showcasing it](http://www.productivefirm.com/2011/01/show-30-clutter-free-home-office-optimized-for-gtd/)... but everything can be improved. Especially that my (almost) 3-year old girl keeps visiting his daddy at the office, I decided to finally get rid of cables by optimizing the cable management even more. In my last iteration the cables were hidden under my desk but still they were hanging there without any protection. As my Nozbe CTO Tomasz visited me this month, we decided to do this one together as a man-bonding exercise :-)
+Well, last year I designed my home office and [I blogged about it](/zen-in-my-new-2010-clutter-free-home-office). Even [recorded a video showcasing it](/show-30-clutter-free-home-office-optimized-for-gtd/)... but everything can be improved. Especially that my (almost) 3-year old girl keeps visiting his daddy at the office, I decided to finally get rid of cables by optimizing the cable management even more. In my last iteration the cables were hidden under my desk but still they were hanging there without any protection. Now it's all protected and the result is even better:
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.img }})
+
+## Teaming up with Tomasz
+
+As my Nozbe CTO Tomasz visited me this month, we decided to do this one together as a man-bonding exercise :-)
+
+![{{ page.title }} 2](/img/cable-management-in-my-home-office.jpg)
 
 ## Starting with the Mac Mini
 
