--- a/en/_posts/2009-12-23-office09.md
+++ b/en/_posts/2009-12-23-office09.md
@@ -4,7 +4,7 @@ cover: "christmas-cleaning-clutter-free-productive-ho.jpg"
 redirect_from: /christmas-cleaning-clutter-free-productive-ho/
 ---
 
-# Christmas Cleaning: Clutter-free Productive Home Office
+# Clutter-free 2009 Productive Home Office
 
 OK, so after we've moved to our new apartment I got my very own room to set up my very own [home office](/office/) where I'd be productive when at home... and I wanted a true clutter-free experience. As you know, [in the past I managed to pack all of my office-related stuff into an Ikea cabinet](http://michaelnozbe.com/declutter-your-desk-why-i-love-my-clutter-fre) but this time around I was aiming at an Apple-style-designed big, clean, lean and clutter-free desk. This is the outcome:
 
