--- a/en/_posts/2009-12-23-office09.md
+++ b/en/_posts/2009-12-23-office09.md
@@ -1,6 +1,6 @@
 ---
 tags: [office]
-cover: "christmas-cleaning-clutter-free-productive-ho.jpg"
+cover: "office09.jpg"
 redirect_from: /christmas-cleaning-clutter-free-productive-ho/
 ---
 
@@ -10,7 +10,7 @@ OK, so after we've moved to our new apartment I got my very own room to set up m
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/christmas-cleaning-clutter-free-productive-ho.jpg)
 
 ## My new 2009 home office is glorious! 
 
