--- a/en/_posts/2010-11-30-office10.md
+++ b/en/_posts/2010-11-30-office10.md
@@ -1,6 +1,6 @@
 ---
 tags: [office]
-cover: "zen-in-my-new-2010-clutter-free-home-office.jpg"
+cover: "office10.jpg"
 redirect_from:
  - /zen-in-my-new-2010-clutter-free-home-office/
  - /clutter-free-office-space-ideas/
@@ -13,7 +13,7 @@ I'm a productivity geek and I love tweaking my home office space. In the past th
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/zen-in-my-new-2010-clutter-free-home-office.jpg)
 
 There it is - my new home office built entirely out of Ikea furniture (ok, the chair does not come from Ikea) and it's clean, bright and white... and I love getting stuff done here.
 
