--- a/en/_posts/2011-10-04-office11.md
+++ b/en/_posts/2011-10-04-office11.md
@@ -1,6 +1,6 @@
 ---
 tags: [office]
-img: "office11.jpg"
+cover: "office11.jpg"
 redirect_from: /cable-management-in-my-home-office/
 ---
 
@@ -11,7 +11,7 @@ Well, last year I designed my home office and [I blogged about it](/zen-in-my-ne
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Teaming up with Tomasz
 
