--- a/en/_posts/2012-02-14-5nozbe.md
+++ b/en/_posts/2012-02-14-5nozbe.md
@@ -1,5 +1,5 @@
 ---
-tags: [business]
+tags: [nozbe,business]
 img: "5-years-helping-folks-get-things-done.jpg"
 redirect_from: /5-years-helping-folks-get-things-done/
 ---
