--- a/en/_posts/2015-02-17-remag.md
+++ b/en/_posts/2015-02-17-remag.md
@@ -1,5 +1,5 @@
 ---
-tags: [business]
+tags: [projects,video]
 vid: "KSHx2x00LZg"
 ---
 
@@ -14,15 +14,5 @@ vid: "KSHx2x00LZg"
 This is just the beginning. We're committed to helping bloggers from all around the world take their blogs to a whole new level on mobile with their own apps. Let me know what you think about this idea!
 
 ***Question:*** *did you ever want your own app on the AppStore? Would Remag be something for you?*
-
-[iMagazine]: http://iMagazine.pl
-[Dropbox]: http://db.tt/kD7Liux
-[Evernote]: /how-i-use-evernote
-[It's all about Passion!]: /passion
-[Nozbe]: http://nozbe.com/
-[#iPadOnly]: https://michael.gratis/ipadonly
-[Productive! Magazine]: http://productivemag.com/
-[Productive! Show]: /show
-[Twitter]: http://twitter.com/MSliwinski
 
 [n]: https://michael.gratis/nozbe
