--- a/en/_posts/2015-06-04-pm13pl.md
+++ b/en/_posts/2015-06-04-pm13pl.md
@@ -5,8 +5,7 @@ img: "pm13pl.jpg"
 
 # How to deal with Chinese providers, manage family life and productivity - my interview with Bogdan Wicinski (in Polish) [for the: Productive! Magazine Poland issue 13]
 
-Our Polish franchise of [Productive! Magazine][] is doing really great! It's got an almost monthly schedule with great interviews and fantastic contributors. This time, I'm interviewing Bogdan Wicinski of Manta SA - one of the leading Polish electronics importer and manufacturer. 
-Please note that the interview and the entire magazine is in Polish. Here are a few quotes from [the magazine - get it from the App Store or Google Play][s]:
+Our Polish franchise of [Productive! Magazine](http://productivemag.pl/) is doing really great! It's got an almost monthly schedule with great interviews and fantastic contributors. This time, I'm interviewing Bogdan Wicinski of Manta SA - one of the leading Polish electronics importer and manufacturer. Please note that the interview and the entire magazine is in Polish. Here are a few quotes from [the magazine - get it from the App Store or Google Play][s]:
 
 <!--More-->
 
@@ -20,9 +19,4 @@ Please note that the interview and the entire magazine is in Polish. Here are a 
 [***Jump to read the entire issue (in Polish) »***][s] 
 
 [s]: http://productivemag.pl/13/
-[iMagazine]: http://iMagazine.pl
-[Nozbe]: http://nozbe.com/
-[#iPadOnly]: https://michael.gratis/ipadonly/
-[Productive! Magazine Poland]: http://productivemag.pl/
-
 [n]: https://michael.gratis/nozbe
