--- a/en/_posts/2015-06-10-office15.md
+++ b/en/_posts/2015-06-10-office15.md
@@ -1,6 +1,6 @@
 ---
 tags: [office]
-img: "homeoffice2015.jpg"
+cover: "office15.jpg"
 redirect_from:
  - /homeoffice2015/
 ---
@@ -11,7 +11,7 @@ Almost every year I'm changing the look and feel of my Home Office. As you know 
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/homeoffice2015.jpg)
 
 ## Let's start with a stand-up desk!
 
