--- a/en/_posts/2016-07-29-jeff.md
+++ b/en/_posts/2016-07-29-jeff.md
@@ -19,8 +19,8 @@ Jeff convinces that if you read his book you will get a list of think you could 
 
 He also gives you a whole bunch of practical tips and motivates you to change the way you plan your day.
 
-* The book "The 5 AM Miracle" offers you a plan to focus on what matters most, and get more done. It shows how to reap the incredible benefits of early rising, from demolishing your to-do list to making time for your passion projects :-) - get it now: [http://amzn.to/1HHldbo](http://amzn.to/1HHldbo)
+- The book "The 5 AM Miracle" offers you a plan to focus on what matters most, and get more done. It shows how to reap the incredible benefits of early rising, from demolishing your to-do list to making time for your passion projects :-) - [get it now](http://amzn.to/1HHldbo)
 
-* Jeff's podcast: [https://www.jeffsanders.com/the-5-am-miracle-podcast/](https://www.jeffsanders.com/the-5-am-miracle-podcast/)
+- [Jeff's podcast](https://www.jeffsanders.com/the-5-am-miracle-podcast/)
 
 Question: Have you tried to switch to rising early in the morning? How did it go?
