--- a/en/_posts/2012-10-18-office12.md
+++ b/en/_posts/2012-10-18-office12.md
@@ -1,6 +1,6 @@
 ---
 tags: [office]
-img: "simplifying-productive-home-office-in-2012.jpg"
+cover: "office12.jpg"
 redirect_from:
  - /simplifying-productive-home-office-in-2012/
 ---
@@ -12,7 +12,7 @@ If you follow me long enough you know every year or so I like to reorganize my h
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/simplifying-productive-home-office-in-2012.jpg)
 
 ## 2012 theme: "Stand up working and Minimalism with iPad"
 
