Last fixes and new blog post no office fm

--- a/en/_posts/2017-06-27-podcast-102.md
+++ b/en/_posts/2017-06-27-podcast-102.md
@@ -12,7 +12,7 @@ This week on [The Podcast][1] we discuss the topic of [iPadOnly][2]! I’m tryin
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-## Listen to this week's episode:][7]
+## [Listen to this week's episode:][7]
 
 <audio controls>
 <source src="https://files.nozbe.com/podcast/102.mp3" type="audio/mpeg">
