--- a/en/_posts/2018-11-20-homepod.md
+++ b/en/_posts/2018-11-20-homepod.md
@@ -29,7 +29,7 @@ This is where I realized that I can start talking to my iPhone much more - and I
 
 Yes, Apple still has a long way to go, but I still remember when I got my iPhone 4S to be able to talk to Siri and was disappointed... and with every subsequent iPhone the disappointment turned into frustration... but now with HomePod I’ve re-learned to appreciate the voice commands and to try them so much more... and to enjoy them finally!
 
-Give Siri a try yourself... and if you can get the HomePod, I totally recommend it :-)
+Give Siri a try yourself... and if you can get the HomePod, I totally recommend it!
 
 
 [n]: https://michael.gratis/nozbe
