--- a/en/_posts/2019-07-30-emotions.md
+++ b/en/_posts/2019-07-30-emotions.md
@@ -1,6 +1,6 @@
 ---
-tags: [business]
-img: "emotions.jpg"
+tags: [business,draw]
+cover: "emotions.jpg"
 ---
 
 # Emotions in business are too often getting in the way of rational thinking... so keep giving yourself time to cool off... and read between the lines!
@@ -9,7 +9,7 @@ We’re humans and we’re emotional. Apparently the notion is that women are mo
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.img }})
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## We should remember to make time and space to cool down!
 
