--- a/en/_posts/2019-08-11-noiron.md
+++ b/en/_posts/2019-08-11-noiron.md
@@ -1,5 +1,5 @@
 ---
-tags: [productivity,sports]
+tags: [sports,productivity]
 cover: "noiron.jpg"
 ---
 
@@ -12,6 +12,8 @@ This time I didn’t make it. This time I was really late. This time I really bl
 I was standing there with the bike and the gear, completely ashamed and disappointed... and was replaying the events of this day over and over in my head trying to realize what just happened. I couldn’t understand how I got to this point where the race will take place and I won’t be in it. And it all looked so promising...
 
 <!--More-->
+
+![{{ page.title }}](/img/{{ page.cover }})
 
 ## Post mortem...
 
@@ -126,8 +128,6 @@ When I think about it, it wasn’t just this Saturday. Looking at the big pictur
 That’s it for now. I’m beating myself up at this point... but the fact of the matter is that I can’t turn back the time. I blew it and I have to own it... and hopefully with this post I’ve more-less figured out the way to do better next time.
 
 Again, thanks for all your support and so sorry for letting you (and myself) down.
-
-![{{ page.title }}](/img/{{ page.cover }})
 
 [n]: https://michael.gratis/nozbe
 [p]: /podcast
