--- a/en/_posts/2021-12-29-news-8.md
+++ b/en/_posts/2021-12-29-news-8.md
@@ -11,7 +11,7 @@ As 2021 is ending I always try to take the time to disconnect, read a lot and st
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-> **Note:** this is a transcript of the email Newsletter I sent to my 1000+ subscribers on Tuesday, September 28. If you want to be one of them, [sign up for my free Newsletter. You can unsubscribe anytime!](/news/)
+> **Note:** this is a transcript of the email Newsletter I sent to my 1000+ subscribers a few days ago. If you want to be one of them, [sign up for my free Newsletter. You can unsubscribe anytime!](/news/)
 
 ## Home office!
 
