--- a/en/_posts/2022-01-17-noofficefm-33.md
+++ b/en/_posts/2022-01-17-noofficefm-33.md
@@ -1,12 +1,12 @@
 ---
 tags: [noofficefm]
-vid: "No2OstL1pzo"
+vid: "qP-T66G6aMM"
 podcast: 1527466890
 ---
 
-# No Office FM #23: Best tips to successful workation
+# No Office FM #33: Rafal’s MacBook Pro Optimized Desk Setup
 
-Welcome to the episode #23 of my podcast about working remotely with Rafal, [Nozbe][n]'s VP of Product. As vacation time for many people on our team starts, some want to unplug completely when others want just change the place they work from. We call it workation! Here are the details:
+Welcome to the episode #33 of my podcast about working remotely with Rafal, [Nozbe][n]'s VP of Product. First podcast of the year and we talk about Rafal’s new home office set up around his new MacBook Pro. Lots of great tips and tricks, similar to my [home office](/office)
 
 {% include video.html id=page.vid %}
 
@@ -15,12 +15,12 @@ Welcome to the episode #23 of my podcast about working remotely with Rafal, [Noz
 ## Listen to the audio:
 
 <audio controls>
-<source src="https://media.transistor.fm/4fc087a9/262da3cc.mp3" type="audio/mpeg">
+<source src="https://media.transistor.fm/c925084e/e39c7411.mp3" type="audio/mpeg">
 </audio>
 
 
 
-[Full episode show notes at NOOFFICE.FM/23](https://nooffice.fm/23)
+[Full episode show notes at NOOFFICE.FM/33](https://nooffice.fm/33)
 
 ## Subscribe "No Office FM":
 
