--- a/en/_posts/2020-12-21-rolling.md
+++ b/en/_posts/2020-12-21-rolling.md
@@ -1,5 +1,5 @@
 ---
-tags: [ipadonly,iphone,life]
+tags: [projects,ipadonly,iphone]
 img: "rolling.jpg"
 ---
 
@@ -35,7 +35,7 @@ Each "throw" is new. Each is independent.
 
 Enjoy throwing the virtual dice and if you like it, please share the page with your friends. Thanks!
 
-### [🎲 or 🎲🎲 at Michael.team/dice](/dice)
+## [🎲 or 🎲🎲 at Michael.team/dice](/dice)
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
