update automatic monitoring

--- a/en/_posts/2022-01-20-afib.md
+++ b/en/_posts/2022-01-20-afib.md
@@ -31,21 +31,21 @@ The watch is constantly monitoring my father and when he's in doubt, he just doe
 
 ## Atrial fibrillation warning by Apple Watch!
 
-The kicker comes in when the watch actively warns him that he's having an episode of atrial fibrillation. A notification pops up on his watch (as pictured above) and even though he's feeling relatively fine, he knows it's coming.
+The kicker comes in when the watch actively warns him that he's having an episode of atrial fibrillation. A notification pops up on his watch (as pictured above) and even though he's feeling relatively fine, he knows it's coming. This way he can proactively take his meds and lie down to get his strength back.
 
-This way he can proactively take his meds and lie down to get his strength back.
+Again, I can't highlight it enough - because the Apple Watch is on his wrist constantly monitoring him and doing ECG on him every now and then, the watch knows. So my father doesn't need to launch ECG app manually. He gets an alert and notification when the watch detects an issue!
 
 Recently he's been having these episodes fairly frequently so he appreciates even more so that his Apple Watch is constantly monitoring him.
 
 Also, when his doctor asks him about these episodes, he can quickly pull up a chart from his Health app.
 
-## Apple Watch ⌚️ is a true health monitor!
+## Apple Watch ⌚️ series 4 and newer - a true health monitor!
 
-I'm also happy that the from Apple Watch 6 on, which I've been rocking for more than a year and a half, also added the blood oxygen monitoring. This kept me sane during the [Covid-19 pandemic](/covid/) recently.
+If you're in doubt if an Apple Watch is useful for your parents or other loved ones with heart issues, I hope this post inspires you to take action. And you don't have to buy the latest and the greatest! Apple Watch from series 4 on has become a great health monitoring device and this is the watch that my dad is wearing right now.
+
+Of course, as a geek I'm happy that the from Apple Watch 6 on, which I've been rocking for more than a year and a half, Apple also added the blood oxygen monitoring. This kept me sane during the [Covid-19 pandemic](/covid/) recently.
 
 The Apple Watch series 7 hasn't introduced any new sensors so I'm hoping for improvements next year with the series 8!
-
-Anyway, if you're in doubt if an Apple Watch is useful for your parents or other loved ones with heart issues, I hope this post inspires you to take action. Apple Watch from series 4 on has become a great health monitoring device!
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
