--- a/en/_posts/2015-12-21-ferrari.md
+++ b/en/_posts/2015-12-21-ferrari.md
@@ -21,6 +21,8 @@ And I'm not saying that experiences are good and things are bad! Most are great!
 
 ***Question:*** *What experiences have you given as gifts lately?*
 
+{% include video.html id="qpxJePtb3C8" %}
+
 [tp]: http://thepodcast.fm
 [i]: http://iMagazine.pl
 [d]: http://db.tt/kD7Liux
