--- a/pl/_posts/2017-08-01-ipad105.md
+++ b/pl/_posts/2017-08-01-ipad105.md
@@ -3,7 +3,7 @@ tags: [imagazine]
 cover: "ipad105.jpg"
 ---
 
-# Temat: iPadOnly na 10,5” - czy nowy iPad Pro i iOS11 to wreszcie poważny zestaw do pracy?
+# iPadOnly na 10,5” - czy nowy iPad Pro i iOS11 to wreszcie poważny zestaw do pracy?
 
 Temat artykułu ma formę pytania, choć i tak wszyscy, którzy mnie znają, wiedzą, że odpowiem: „Oczywiście, przecież na iPadzie już od dawna można spokojnie pracować!” Jednak ja jestem ewenementem - wykonuję swoją robotę na iPadzie już od ponad pięciu lat, czyli czasów iOS6... Tymczasem wiele osób nadal nie może się przekonać do iPada jako „poważnego” komputera, i ten artykuł właśnie do nich kieruję.
 
