--- a/en/_posts/2022-01-27-iwallet.md
+++ b/en/_posts/2022-01-27-iwallet.md
@@ -66,13 +66,13 @@ Yes, when I was still rocking the [iPhone 7 jet black](/iphone7plus-jetblack/) a
 
 ## …all the way back to the iPhone 5 minimalist wallet
 
-It all started with two elastic bands, called *Quirky Crossover* which was my [first minimalist iWallet](/)
+It all started with two elastic bands, called *Quirky Crossover* which was my [first minimalist iWallet](/iphone-wallet/):
 
+![iPhone 5 Minimalist Wallet](/img/iphone-wallet.jpg)
 
+## Are you still carrying a wallet or are you a minimalist "iWallet" person?
 
-My history with wallets 
-
-First one, cut out, Mujjo, MagSafe and now moft- with photos because why not
+In my country of Poland 🇵🇱 you actually don't need to carry a wallet at all. You have an app for your driver's license and photo ID. Together with Apple Pay, why do we need wallets anyway?
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
