--- a/en/_posts/2022-01-27-iwallet.md
+++ b/en/_posts/2022-01-27-iwallet.md
@@ -5,7 +5,7 @@ cover: "iwallet.jpg"
 
 # iWallet - an iPhone minimalist wallet that has been with me for the past 9 years!
 
-When I published my [best posts from a decade ago](/2012best/) I realized that there are things I started doing a decade ago and I keep doing to this day. Like [working standing](/im-still-standing-my-latest-video-show/) or [using iPad as my main computer](/ipad-as-my-main-computer-prologue/). It turns out, that 9 years ago [I started having a minimalist wallet attached to my iPhone](/iphone-wallet/) and never looked back. Today, my [iPhone 13 Pro](/iphone13/) wallet looks like this:
+When I published my [best posts from 2012](/2012best/) I realized that there are things I started doing a decade ago and I keep doing to this day. Like [working standing](/im-still-standing-my-latest-video-show/) or [using iPad as my main computer](/ipad-as-my-main-computer-prologue/). It turns out, that 9 years ago [I started having a minimalist wallet attached to my iPhone](/iphone-wallet/) and never looked back. Today, my [iPhone 13 Pro](/iphone13/) wallet looks like this:
 
 <!--More-->
 
