updates LI sizes and updates to yearly review and nooffice

--- a/en/_posts/2022-02-10-2021.md
+++ b/en/_posts/2022-02-10-2021.md
@@ -83,9 +83,9 @@ Now that I play tennis and also do other sports, I'm reviewing my goals for this
 
 2021 was hard and I hope 2022 will be better. So far I can report that I've made significant strides into making it so.
 
-After all, it's the journey that is the destination. I'm grateful for doing what I love, for having an amazing team on my side and having great [Nozbe][n] users and this blog's readers to support me.
+After all, it's the journey that is the destination. I'm grateful for [doing what I love](/5-loves/), for having an amazing team on my side and having great [Nozbe][n] users and this blog's readers to support me.
 
-Let's go!
+Let's go! 💪
 
 
 [n]: https://michael.gratis/nozbe
