niemabiura i auto fix

--- a/pl/_posts/2022-03-01-auto.md
+++ b/pl/_posts/2022-03-01-auto.md
@@ -1,12 +1,23 @@
 ---
 tags: [imagazine]
-
+cover: "auto.jpg"
 ---
 
 
-## Automatyzuj życie zawodowe i prywatne w 2022 roku!
+# Automatyzuj życie zawodowe i prywatne w 2022 roku!
 
 Jednym z sekretów sukcesu jest konsekwencja. Wystarczy 10,000 godzin pracy na czymś, regularne pisanie, nagrywanie treści, czy codzienne ćwiczenia, lub dobry poranny rytuał… Jeśli którykolwiek z tych tematów jest Ci bliski, lub chcesz rozwijać się w którymś z nich w tym roku - czytaj dalej.
+
+<!--More-->
+
+![{{ page.title }}](/img/{{ page.cover }})
+
+{% include lang.date.html date="2022-02-01" month=true %}
+
+> Ten felieton jest z wydania z {{ langdate }} [iMagazine](https://imagazine.pl){:target='_blank'}
+
+* TOC
+{:toc}
 
 ## Konsekwencja a upraszczanie
 
