--- a/en/_posts/2022-03-17-meet.md
+++ b/en/_posts/2022-03-17-meet.md
@@ -72,5 +72,7 @@ We also use these kinds of moments to meet up as a [Nozbe][n] team. Last week wh
 
 Yes, I'm all for [working remotely](/nooffice/) but I'm also all for meeting people in person.
 
+![{{ page.title }} - 2](/img/meet-2.jpg)
+
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
