Fixes to JS, white, no war

--- a/404.md
+++ b/404.md
@@ -10,14 +10,12 @@ share: noshow
 
 {% include tags.html %}
 
-## 🔍 Find a blog post or page
+## 🔍 <a href="javascript:getSearch();">Find a blog post or page</a>
 
-{% include search.html %}
+## 🗂 [Browse the archives](/archive)
 
-## 🗂 Browse [the archives](/archive)
+### Or go back [to the home page](/)
 
-Or go back [to the home page](/)
+## 🇵🇱 [Zobacz moje artykuły i treści po Polsku](/pl/)
 
-## 🇵🇱 Zobacz [moje artykuły i treści po Polsku](/pl/)
-
-## 🇪🇸 Mira mis [artículos en español](/es/)
+## 🇪🇸 [Mira mis artículos en español](/es/)
