--- a/en/_posts/2022-02-27-ukraine.md
+++ b/en/_posts/2022-02-27-ukraine.md
@@ -17,6 +17,10 @@ Last year as the Tokyo Olympics took place, Apple launched an International Coll
 
 ![{{ page.title }} 2](/img/ukraine-2.jpg)
 
+Alternatively, if you can't get this limited-edition watch band, you can use blue and yellow sports fluoroelastomer bands like this:
+
+![{{ page.title }} 5](/img/ukraine-5.jpg)
+
 ## Olympic Watch face for Sweden can be customized to turn it into the flag of Ukraine 🇺🇦 
 
 To get the watch face I used the code [from a 9to5mac article](https://9to5mac.com/2021/07/01/download-international-apple-watch-faces/) and just opened the page on my [iPad](/ipadonly/) and then scanned the code with the iPhone and added the yellow-blue "Stripes" watch face to the Watch app.
